# synaplex

./: .gitignore  BRANCHING_IMPLEMENTATION.md  CLAUDE.md  CONVERGENCE_PLAN.md  CURRENT_STATE.md  IDEAS_WORLD_SUMMARY.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  MANIFOLD_PERSISTENCE_IMPLEMENTATION.md  README.md  RESEARCH_CAPABILITIES_IMPLEMENTATION.md  UPDATE_MECHANISM_IMPLEMENTATION.md  pyproject.toml
.prompteval/: inventory.json
deploy/: subscription-cli-paths.env  synaplex-conjecture-eval-capture.service  synaplex-conjecture-eval-capture.timer  synaplex-cycle-v2-review-retry.service
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_NOTES.md  GEOMETRIC_CONSTITUTION.md  GETTING_STARTED.md  GLOSSARY.md  IDEAS_WORLD.md  WORLD_CREATION.md
examples/: comprehensive_example.py  geometric_operators_example.py  multi_agent_example.py  nature_nurture_experiment.py  openai_usage.py  quick_start_example.py
experiments/: prompts.json  prompts.txt  recent_news.md  semantic_inferometer.ipynb  worldview.md
intake/: README.md  __init__.py  __main__.py  beats.py  digest.py  escalation.py  friction.py  friction_classifier.py  friction_spool.py  hashing.py  limits.py  paths.py  score.py  synthesize.py  test_cap_policy.py  test_friction_classifier.py  test_friction_resilience.py  test_no_metered_spend.py  test_skip_next_run.py  test_source_type.py
integrity/: __init__.py  __main__.py
knowledge/: __init__.py  engineering-cases.json  engineering-cases.schema.json  generate.py  public-metadata.json  public-projection.json  public-projection.schema.json  public-status.json  public-status.schema.json  test_projection.py
lab/: __init__.py
reasoning/: __init__.py  check_programmes.py
reviews/: cross-domain-conjecture-v1-retirement-2026-07-19.md  public-evidence-surface-adversarial-review-2026-07-19.md  public-evidence-surface-review-target.md
scripts/: capture-conjecture-eval.sh  process_ideas.py  run-cycle-v2-review-continuation.sh  test_subscription_cli_launcher.py
site/: astro.config.mjs  package-lock.json  package.json  test_epistemic_copy.py
sources/: __init__.py  registry.json  registry.py  registry.schema.json  test_registry.py
tests/: test_branching.py  test_fractalmesh_smoke.py  test_frottage.py  test_invariants_imports.py  test_invariants_indexer_flow.py  test_invariants_loop_modes.py  test_smoke.py  (+7 more)
(+209 files in other folders)
