[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synaplex-intake"
version = "0.1.0"
description = "synaplex Layer 1 intake — external-signal ingestion for the synaplex loop (ADR-0029)"
requires-python = ">=3.12"
readme = "intake/README.md"
authors = [
  { name = "Evan Follis", email = "evan.follis@gmail.com" }
]
dependencies = [
  "feedparser>=6.0",
  "httpx>=0.27",
  "anthropic>=0.40",
]

[project.scripts]
synaplex-intake = "intake.__main__:main"

[tool.setuptools.packages.find]
include = ["intake*"]
exclude = ["tests*", "site*", "lab*"]
