[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synaplex-intake"
version = "0.1.0"
description = "synaplex Layer 1 intake — external-signal ingestion for the synaplex loop (ADR-0029)"
requires-python = ">=3.12"
readme = "intake/README.md"
authors = [
  { name = "Evan Follis", email = "evan.follis@gmail.com" }
]
dependencies = [
  "feedparser>=6.0",
  "httpx>=0.27",
]

# The lab's browser observation tooling. Pinned exactly, not floored: the browser IS the
# instrument for artifact-coherence-transfer-v1, whose primary outcome is browser-visible
# behavior, and a result produced by a different browser is a different result. The executor's
# preflight refuses to observe if the installed version is not this one, so a drifted host
# fails loudly instead of quietly measuring with an instrument the pre-registration never
# declared. Host provisioning (browser build + apt packages) is in
# `lab/evals/artifact-coherence-transfer-v1/TOOLING.md`.
[project.optional-dependencies]
lab = [
  "playwright==1.61.0",
]

[project.scripts]
synaplex-intake = "intake.__main__:main"

[tool.setuptools.packages.find]
include = ["intake*"]
exclude = ["tests*", "site*", "lab*"]
